[gd_scene load_steps=2 format=3 uid="uid://8cebfdd0uukc"]

[ext_resource type="Script" uid="uid://4ad2rmle12qa" path="res://books/list/toggleList/ToggleListContainer.gd" id="1_27ufv"]

[node name="ToggleListContainer" type="MarginContainer"]
script = ExtResource("1_27ufv")

[node name="Button" type="Button" parent="."]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
flat = true

[node name="BackgroundColorRect" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="NameScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="NameRichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/NameScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
